[NEW+FIX] Added home view, added notification support in main menu, added full registration procedure support, added support for user profile and image, minor adjustments
Signed-off-by: GiuliaPais <giuliapais1@gmail.com>